# readme-auto-update

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  entrypoint.py  index.html  pyproject.toml  readme-demo.html
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: readme-auto-update.yml
skills/readme-auto-update/: SKILL.md
skills/readme-auto-update/agents/: openai.yaml
skills/readme-auto-update/references/: github-access.md  writing-policy.md
skills/readme-auto-update/scripts/: github_snapshot.py  update_readme.py
src/readme_auto_update/: __init__.py  __main__.py  config.py  generators.py  git.py  github.py  markdown.py  runner.py  snapshot.py
tests/: test_config.py  test_generators.py  test_git.py  test_integration.py  test_markdown.py  test_parity.py  test_runner.py  test_skill_scripts.py  test_snapshot.py  test_version.py
