[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-auto-update"
version = "1.0.0"
description = "Summarize GitHub work and maintain an evidence-based profile README"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "README Auto Update contributors" }]
dependencies = []

[project.scripts]
readme-auto-update = "readme_auto_update.runner:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
